--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -282,12 +282,18 @@
     background-color: black;
     outline: 5px dashed red;
 }
-.ffg_not_drawn_pos{
+.ffg_not_drawn_pos.ffg_selectable{
     /* Don't hide it because we want to be able to draw it later for selection
     visibility: hidden;
     */
     background-color: transparent;
     outline: 5px solid blue;
+}
+.ffg_not_drawn_pos.ffg_selectable:hover {
+  scale: 1.1;
+  outline-style: solid;
+  outline-color: yellow;
+  z-index: 2;
 }
 
 /* 
