[UI] Center board in play zone

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -72,6 +72,8 @@
     text-align: center;
     display: flex;
     flex-flow: row;
+    align-items: center;
+    justify-content: center;
 }
 
 /* 
