[UI] Display possibles joker values
Recall server each time the joker is prepared for a cargo, return all possible values => the player still can change their mind and select anything else

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -68,6 +68,10 @@
   --ffg_truck_position_medium_size: 43px;
 }
 
+.ffg_no_display{
+    display: none;
+}
+
 #ffg_game_zone{
     text-align: center;
     display: flex;
